# docuinsight-rag

./: .env.example  .gitignore  LICENSE  README.md  langgraph.json  pyproject.toml
.github/workflows/: ci.yml
data/: cross_lingual_architecture.md  eval_progression.md  rag-constitution.md  testset.json  testset_bio.json
eval_results/: 20260402_1926_eval.json  20260402_1926_eval.md
scripts/: generate_healthcare_pdfs.py
src/: advanced_agent.py  agent_core.py  agent_graph.py  app.py  app_helpers.py  app_render.py  console_chat.py  discovery.py  evaluate.py  exporter.py  guardrail.py  ingest.py  llm_provider.py  retriever.py
tests/: test_crosslingual_retrieval.py  test_e2e_crosslingual.py  test_exports.py  test_integration.py  test_multilingual_expansion.py  test_phase0.py  test_phase1.py  test_phase2.py  test_phase3.py  test_unit.py  test_writer_language.py
